--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "@uniswap/v3-periphery": "^1.3.0",
     "bignumber.js": "^9.0.1",
     "dotenv": "^9.0.2",
-    "hardhat-gas-reporter": "^1.0.4"
+    "hardhat-gas-reporter": "^1.0.4",
+    "web3": "^1.7.0",
+    "web3-utils": "^1.7.0"
   }
 }
